k8s/apps/nextcloud/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  labels: &labels
    app.kubernetes.io/name: nextcloud
    app.kubernetes.io/component: server
spec:
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:

      securityContext:
        fsGroup: 2000

      volumes:
        - name: installation
          persistentVolumeClaim:
            claimName: nextcloud

      containers:
        - name: php-fpm
          image: docker.io/nextcloud
          imagePullPolicy: Always
          volumeMounts:
            - name: installation
              mountPath: /var/www/html
          ports:
            - name: http
              containerPort: 80
          readinessProbe:
            tcpSocket:
              port: http
