k8s/apps/nextcloud/manifests/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels: &labels
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: cache-server
spec:
  selector: *labels
  ports:
    - name: redis
      port: 6379
      targetPort: redis
